update js files

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </header>
       <section class="quiz">
         <p class="question" id="question"></p>
-        <div class="answers-list" id="answers"></div>
+        <div class="answers-list" id="answers-list"></div>
       </section>
       <!-- QUIZ FOOTER -->
       <footer class="flex flex--sb">
