Add media queries

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2>Quiz Completed</h2>
       <div class="scores">
         <h3>Congratulations!</h3>
-        <p>You got <span id="score"></span> out of 10</p>
+        <p>You got <span id="score"></span> out of 10 Questions.</p>
       </div>
       <div class="results-btns">
         <button class="btn btn--reverse next" id="replay">Replay Quiz</button>
